--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <img src="assets/images/DSC_3036.JPG" alt="anna">
   </div>
   <div class="paper">
-    <p>Have a great day❤️</p>
+    <p>Have a greaT day❤️</p>
     <img src="assets/images/DSC_3037.JPG" alt="anna">
   </div>
   <div class="paper">
