--- a/index.html
+++ b/index.html
@@ -15,34 +15,37 @@
     <h1>Happy Birthday rah ANNAYYA!😍</h1>
   </div>
 
-  <!-- Papers -->
-  <div class="paper">
-    <p>Once again happy birthday😍</p>
-    <img src="assets/images/anna1.jpg" alt="anna">
-  </div>
-  <div class="paper">
-    <p>You are my God gift rah😍</p>
-    <img src="assets/images/anna2.jpg" alt="anna">
-  </div>
-  <div class="paper">
-    <p>You are the Best Brother❤️</p>
-    <img src="assets/images/anna3.jpg" alt="anna">
-  </div>
-  <div class="paper">
-    <p>Have a beautiful year Ahead❤️</p>
-    <img src="assets/images/anna4.jpg" alt="anna">
-  </div>
-  <div class="paper">
-    <p>God will bless you❤️</p>
-    <img src="assets/images/DSC_3036.JPG" alt="anna">
-  </div>
-  <div class="paper">
-    <p>Have a greaT day❤️</p>
-    <img src="assets/images/DSC_3037.JPG" alt="anna">
-  </div>
-  <div class="paper">
-    <p>You are the strong person I have ever seen❤️</p>
-    <img src="assets/images/DSC_3097.JPG" alt="anna">
+  <!-- 3D Card Container -->
+  <div class="container">
+    <!-- Paper Elements -->
+    <div class="paper">
+      <p>Once again happy birthday😍</p>
+      <img src="assets/images/anna1.jpg" alt="anna">
+    </div>
+    <div class="paper">
+      <p>You are my God gift rah😍</p>
+      <img src="assets/images/anna2.jpg" alt="anna">
+    </div>
+    <div class="paper">
+      <p>You are the Best Brother❤️</p>
+      <img src="assets/images/anna3.jpg" alt="anna">
+    </div>
+    <div class="paper">
+      <p>Have a beautiful year Ahead❤️</p>
+      <img src="assets/images/anna4.jpg" alt="anna">
+    </div>
+    <div class="paper">
+      <p>God will bless you❤️</p>
+      <img src="assets/images/DSC_3036.JPG" alt="anna">
+    </div>
+    <div class="paper">
+      <p>Have a greaT day❤️</p>
+      <img src="assets/images/DSC_3037.JPG" alt="anna">
+    </div>
+    <div class="paper">
+      <p>You are the strong person I have ever seen❤️</p>
+      <img src="assets/images/DSC_3097.JPG" alt="anna">
+    </div>
   </div>
 
   <script src="assets/js/birthday.js"></script>
