--- a/index.html
+++ b/index.html
@@ -3,38 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday ANNAYYA!</title>
+  <title>Happy Birthday rah ANNAYYA!</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Background Music -->
-  <audio id="background-music" src="audio/we_dont_talk_anymore.mp3" preload="auto" autoplay loop></audio>
+  <!-- Background Song -->
+  <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
 
-  <!-- Birthday Message -->
+  <!-- Birthday Box -->
   <div id="birthday-box">
     <h1>Happy Birthday rah ANNAYYA!😍</h1>
   </div>
 
-  <!-- Draggable Cards -->
+  <!-- Image Cards Container -->
   <div class="container">
     <div class="paper">
-      <p>Once again happy birthday! 😍</p>
-      <img src="images/anna1.jpg" alt="Birthday Image 1">
+      <p>Once again happy birthday😍</p>
+      <img src="assets/images/anna1.jpg" alt="anna">
     </div>
     <div class="paper">
-      <p>You are my God gift rah! 😍</p>
-      <img src="images/anna2.jpg" alt="Birthday Image 2">
+      <p>You are my God gift rah😍</p>
+      <img src="assets/images/anna2.jpg" alt="anna">
     </div>
     <div class="paper">
-      <p>You are the Best Brother ❤️</p>
-      <img src="images/anna3.jpg" alt="Birthday Image 3">
+      <p>You are the Best Brother❤️</p>
+      <img src="assets/images/anna3.jpg" alt="anna">
     </div>
-    <!-- Add more cards as necessary -->
+    <div class="paper">
+      <p>Have a beautiful year Ahead❤️</p>
+      <img src="assets/images/anna4.jpg" alt="anna">
+    </div>
+    <div class="paper">
+      <p>God will bless you❤️</p>
+      <img src="assets/images/DSC_3036.JPG" alt="anna">
+    </div>
+    <div class="paper">
+      <p>Have a great day❤️</p>
+      <img src="assets/images/DSC_3037.JPG" alt="anna">
+    </div>
+    <div class="paper">
+      <p>You are the strong person I have ever seen❤️</p>
+      <img src="assets/images/DSC_3097.JPG" alt="anna">
+    </div>
   </div>
 
-  <!-- Play Button for Mobile -->
-  <button id="play-audio">Play Music</button>
-
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
