--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday rah ANNAYYA!</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Background Song -->
-  <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
+  <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" preload="auto"></audio>
+  <button id="play-audio">Play Audio</button>
 
   <!-- Birthday Box -->
   <div id="birthday-box">
@@ -47,6 +48,6 @@
     </div>
   </div>
 
-  <script src="assets/js/birthday.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
