--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday rah ANNAYYA!</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <!-- Background Song -->
-  <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" preload="auto"></audio>
-  <button id="play-audio">Play Audio</button>
+  <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
 
   <!-- Birthday Box -->
   <div id="birthday-box">
@@ -39,7 +38,7 @@
       <img src="assets/images/DSC_3036.JPG" alt="anna">
     </div>
     <div class="paper">
-      <p>Have a great day❤️</p>
+      <p>Have a greaT day❤️</p>
       <img src="assets/images/DSC_3037.JPG" alt="anna">
     </div>
     <div class="paper">
@@ -48,6 +47,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="assets/js/birthday.js"></script>
 </body>
 </html>
