--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
   <!-- Background Song -->
   <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
+  <button id="play-audio">Play Audio</button>
 
   <!-- Birthday Box -->
   <div id="birthday-box">
     <h1>Happy Birthday rah ANNAYYA!😍</h1>
   </div>
+
+  <!-- Drag Instruction -->
+  <p id="drag-instruction" style="opacity: 0;">Drag the papers to move!</p>
 
   <!-- Image Cards Container -->
   <div class="container">
