--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday rah ANNAYYA!</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <!-- Background Song -->
@@ -51,6 +51,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="assets/js/birthday.js"></script>
 </body>
 </html>
