--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
   <!-- Background Song -->
   <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
-  <button id="play-audio">Play Audio</button>
 
   <!-- Birthday Box -->
   <div id="birthday-box">
@@ -17,7 +16,7 @@
   </div>
 
   <!-- Drag Instruction -->
-  <p id="drag-instruction" style="opacity: 0;">Drag the papers to move!</p>
+  <p id="drag-instruction">Drag the papers to move!</p>
 
   <!-- Image Cards Container -->
   <div class="container">
