--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happy Birthday rah ANNAYYA!</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
+</head>
 <body>
   <!-- Background Song -->
-  <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" preload="auto"></audio>
-  <button id="audio-button" style="display: none; position: absolute; top: 10%; left: 50%; transform: translateX(-50%); padding: 10px 20px; background: #ff4d4d; color: #fff; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">
-    Play Audio 🎵
-  </button>
+  <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
 
   <!-- Birthday Box -->
   <div id="birthday-box">
     <h1>Happy Birthday rah ANNAYYA!😍</h1>
   </div>
 
+  <!-- Drag Instruction -->
+  <p id="drag-instruction">Drag the papers to move!</p>
 
   <!-- Image Cards Container -->
   <div class="container">
@@ -45,3 +52,4 @@
 
   <script src="assets/js/birthday.js"></script>
 </body>
+</html>
