--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <!-- Background Song -->
   <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
+  <button id="audio-button" style="display: none;">Play Audio 🎵</button>
 
   <!-- Birthday Box -->
   <div id="birthday-box">
