--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </div>
 
   <!-- Drag Instruction -->
-  
+  <p id="drag-instruction">Drag the papers to move!</p>
+
 
   <!-- Image Cards Container -->
   <div class="container">
