--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- Background Song -->
   <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
   <button id="audio-button" style="display: none;">Play Audio 🎵</button>
+  <button id="audio-button">Enable Audio</button>
 
   <!-- Birthday Box -->
   <div id="birthday-box">
