--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <!-- Background Song -->
   <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
-  <button id="audio-button" style="display: none;">Play Audio 🎵</button>
-  <button id="audio-button">PLAY SONG</button>
+  
+  
 
   <!-- Birthday Box -->
   <div id="birthday-box">
@@ -18,7 +18,7 @@
   </div>
 
   <!-- Drag Instruction -->
-  <p id="drag-instruction">Drag the papers to move!</p>
+  <p id="drag-instruction">Drag the papers to move! and listen Song</p>
 
 
   <!-- Image Cards Container -->
