--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+  <div id="header">
+    <h1>Happy Birthday, Rah Annayya!</h1>
+  </div>
   <!-- Background Song -->
   <audio id="background-music" src="assets/audio1/we_dont_talk_anymore.mp3" autoplay preload="auto"></audio>
   
   
 
-  <!-- Birthday Box -->
-  <div id="birthday-box">
-    <h1>Happy Birthday rah ANNAYYA!😍</h1>
-  </div>
+  
 
   <!-- Drag Instruction -->
   <p id="drag-instruction">Drag the papers to move! and listen Song</p>
